@@ -26,25 +26,30 @@ then
 	CXXFLAGS=''
 fi
 
+# Collect enable arguments
+#
 # debug
 AC_ARG_ENABLE(debug,
-  AS_HELP_STRING([--enable-debug],[compile with debug (default is no)]),
-  enable_debug="yes",
-  enable_debug="no")
-if test "$enable_debug" = "yes"
-then
-  CXXFLAGS="$CXXFLAGS -g"
-fi
-
+		AS_HELP_STRING([--enable-debug],
+				[compile with debug [default=no]]),,
+		enable_debug="no")
 # optimize
 AC_ARG_ENABLE(optimize,
-  AS_HELP_STRING([[--enable-optimize=flag]],[compile with given optimization flag (default is no)]),
-  ,
-  enable_optimize="")
-if test "x$enable_optimize" != "x"
-then
-  CXXFLAGS="$CXXFLAGS $enable_optimize"
-fi
+		AS_HELP_STRING([--enable-optimize=flag],
+				[compile with given optimization flag [default=no]]),,
+		enable_optimize="")
+# Java
+AC_ARG_ENABLE(java,
+		AS_HELP_STRING([--enable-java],
+				[enable Java code compilation [default=yes]]),,
+		enable_java="yes")
+# Swig
+AC_ARG_ENABLE(swig,
+		AS_HELP_STRING([--enable-swig],
+				[enable SWIG bindings generation [default=no]]),,
+		enable_swig="no")
+
+
 
 # config header file
 AM_CONFIG_HEADER(eyedbconfig.h)
@@ -57,28 +62,38 @@ AC_PROG_CXX
 
 AC_LANG(C++)
 
+# debug and optimize flags
+if test "$enable_debug" = "yes"
+then
+  CXXFLAGS="$CXXFLAGS -g"
+fi
+if test "x$enable_optimize" != "x"
+then
+  CXXFLAGS="$CXXFLAGS $enable_optimize"
+fi
+
 # check for architecture
 AC_CANONICAL_HOST
 
 # must disappear
 case "$host" in
 i*86-*-linux*)
-	DEFINES="-DLINUX -DX86 -DLINUX_X86"
+	DEFINES="-DLINUX -DX86"
 	;;
 
 x86_64-*-linux*)
-	DEFINES="-DLINUX -DLINUX_X86_64"
+	DEFINES="-DLINUX"
 	;;
 
 sparc-sun-solaris2.9)
 	if test "$ac_cv_cxx_compiler_gnu" = "yes"
 	then
-		DEFINES="-DSOLARIS -DSPARCV9 -DSOLARIS_SPARCV9_GCC"
+		DEFINES="-DSOLARIS -DSPARCV9"
 	else
 		CFLAGS="-xtarget=ultra -xarch=v9"
 		CXXFLAGS="$CXXFLAGS -xtarget=ultra -xarch=v9"
 		LDFLAGS="-XCClinker -xtarget=ultra -XCClinker -xarch=v9"
-		DEFINES="-DSOLARIS -DSPARCV9 -DSOLARIS_SPARCV9_CC"
+		DEFINES="-DSOLARIS -DSPARCV9"
 	fi
 	;;
 esac
@@ -95,6 +110,30 @@ else
 EYEDB_CONFIG_BYTE_ORDER=EYEDBLIB_LITTLE_ENDIAN
 fi
 AC_SUBST(EYEDB_CONFIG_BYTE_ORDER)
+
+# check for type sizes
+AC_CHECK_SIZEOF(void *)
+AC_CHECK_SIZEOF(unsigned int)
+AC_CHECK_SIZEOF(unsigned long)
+AC_CHECK_SIZEOF(unsigned long long)
+
+AC_MSG_CHECKING(for integer type of same size as void *)
+case $ac_cv_sizeof_void_p in
+$ac_cv_sizeof_unsigned_int)
+		ac_pointer_int_type='unsigned int'
+	;;
+$ac_cv_sizeof_unsigned_long)
+		ac_pointer_int_type='unsigned long'
+	;;
+$ac_cv_sizeof_unsigned_long_long)
+		ac_pointer_int_type='unsigned long long'
+	;;
+*)
+		AC_MSG_ERROR('cannot find an integer type of same size as void *')
+	;;
+esac
+AC_MSG_RESULT($ac_pointer_int_type)
+AC_DEFINE_UNQUOTED([POINTER_INT_TYPE], $ac_pointer_int_type, [Define to the integer type of same size as void *])
 
 # check for libtool
 AC_PROG_LIBTOOL
@@ -185,11 +224,6 @@ esac
 # ========================================
 # JAVA compilation
 # ========================================
-AC_ARG_ENABLE(java,
-	AS_HELP_STRING([--enable-java],[enable Java code compilation (default is yes)]),
-  	,
-	[enable_java="yes"])
-
 if test "$enable_java" = "yes"
 then
 	AC_PROG_JAVAC
@@ -211,11 +245,6 @@ AC_SUBST(JAVACFLAGS)
 # ========================================
 # SWIG
 # ========================================
-AC_ARG_ENABLE(swig,
-	AS_HELP_STRING([--enable-swig],[enable SWIG bindings generation (default is no)]),
-  	[enable_swig="yes"],
-	[enable_swig="no"])
-
 if test "$enable_swig" = "yes"
 then
 	AC_PROG_SWIG
