@@ -1,3 +1,8 @@
+2006-03-16 Francois Dechelle <francois@dechelle.net>
+
+	* Changed configure.in to find automatically the integer type that has the same size as a void *; fixed files using pointer_int, that is now pointer_int_t.
+	* Changed configure.in to guess the semaphore policy, added a configure argument to force the semaphore policy, plus some sanity check
+
 2006-03-10 Francois Dechelle <francois@dechelle.net>
 
 	* Added m4 macro to check whether PTHREAD_PROCESS_SHARED is supported
